AutoEdits: avoid showing edits with overlapping tools
Allow to query for some tools but still include them in the contribs
lists (such as ProveIt).

Fix browsing of contribs when there is a URL query string.

Bug: T191133

--- a/web/static/css/autoedits.scss
+++ b/web/static/css/autoedits.scss
@@ -40,4 +40,14 @@
         display: inline-block;
         width: auto;
     }
+
+    .tooltipcss--tool-counts {
+        cursor: help;
+        position: relative;
+        vertical-align: -1px;
+
+        .tooltip-body {
+            min-width: 300px;
+        }
+    }
 }
